--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+
+    <!--  favicon  -->
+    <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico' />
 
     <!--  Fontawesome  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -14,7 +18,7 @@
 
     <!--  CSS  -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Document</title>
+    <title>Love Maths</title>
 </head>
 <body>
     <h1 class="heading">
